<resources>
    <string name="app_name">Skillbox chat</string>
    <string name="message" >test message</string>
    <string name="writeDate">01.01.2020</string>
    <string name="userName">user</string>
    <string name="avatar" />
    <string name="messageHint">write a mesage</string>
    <string name="buttonTitle">Send</string>
    <string name="serverUri">ws://35.214.1.221:8881</string>
    <string name="toastMessage"></string>
    <string name="usersCounter">Пользователей онлайн: </string>
</resources>
